Fix state machine and migration workflow stability.

--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,12 @@
 			<groupId>com.synectiks</groupId>
 			<artifactId>common-libraries</artifactId>
 			<version>${project.version}</version>
+			<exclusions>
+				<exclusion>
+					<groupId>org.springframework.data</groupId>
+					<artifactId>spring-data-elasticsearch</artifactId>
+				</exclusion>
+			</exclusions>
 		</dependency>
 		<!-- <dependency>
 			<groupId>com.synectiks</groupId>
