--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,14 @@
-#server.port=8087
-server.port=8096
+#server.port=8096
+server.port=${SERVER_PORT}
 
 logging.level.com.amazonaws = info
 logging.level.org.springframework = info
 logging.level.com.synectiks.portal = trace
 
 #oak.services.url=http://localhost:8082/api/v1/oakRepo
-oak.services.url=http://${OAK_HOME}:8093/api/v1/oakRepo
+oak.services.url=http://${OAK_HOME}:${OAK_PORT}/oakRepo
 #state.machine.url=http://localhost:8083/api/v1/auth/states
-state.machine.url=http://${WRKFLOW_HOME}:8095/api/v1/auth/states
+state.machine.url=http://${WRKFLOW_HOME}:${WRKFLOW_PORT}/auth/states
 
 # default json file name for default states definition.
 synecticks.states.file=statesJson.json
