mt-dynamodb integration

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,4 +14,4 @@ state.machine.url=http://${WRKFLOW_HOME}:${WRKFLOW_PORT}/auth/states
 synecticks.states.file=statesJson.json
 # DynamoDB connection url
 #amazon.dynamodb.endpoint = http://localhost:8000/eu_west_1/
-amazon.dynamodb.endpoint = http://${AWS_ENDPOINT}/${AWS_REGION}/
+amazon.dynamodb.endpoint = http://${AWS_ENDPOINT}/
